apps/security-system/safeline-waf/app/chaos-deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP}-chaos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APP}
      app.kubernetes.io/component: chaos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APP}
        app.kubernetes.io/component: chaos
    spec:
      containers:
        - name: chaos
          image: chaitin/safeline-chaos:9.3.11
          volumeMounts:
            - { name: data, mountPath: /app/sock, subPath: resources/sock }
            - { name: data, mountPath: /app/chaos, subPath: resources/chaos }
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits: { memory: 256Mi }

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ${APP}
